created a textbox and a button.

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+
     <script src="pokemonAPI.js"></script>
+    <input type="text" id="pokemonName" placeholder="Type in Pokemon Name">
+    <button onclick="fetchData()">Click for Pokemon</button>
+
 </body>
 
 </html>
