Updated and added ".getElementById"to retrieve data from API

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -13,6 +13,7 @@
     <script src="pokemonAPI.js"></script>
     <input type="text" id="pokemonName" placeholder="Type in Pokemon Name">
     <button onclick="fetchData()">Click for Pokemon</button>
+    <img src="" alt="Pokemon Image" id="pokemonImage" style="display: none">
 
 </body>
 
