Figuriing out a way to get randomIndex

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -11,8 +11,7 @@
 <body>
 
     <script src="pokemonAPI.js"></script>
-    <input type="text" id="pokemonName" placeholder="Type in Pokemon Name">
-    <button onclick="fetchData()">Click for Pokemon</button>
+    <button id="randomPokemonButton">Click for Pokemon</button>
     <img src="" alt="Pokemon Image" id="pokemonImage" style="display: none">
 
 </body>
