added code to get random pokemon generated with a button

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -9,11 +9,21 @@
 </head>
 
 <body>
+    <h1> Welcome to my Mini Pokedex </h1>
+    <button id="randomPokemonButton"> Click here for a random Pokemon</button>
 
-    <script src="pokemonAPI.js"></script>
-    <button id="randomPokemonButton">Click for Pokemon</button>
     <img src="" alt="Pokemon Image" id="pokemonImage" style="display: none">
 
+    <div>
+
+        <p id="pokemonName"> Name: </p>
+        <p id="pokemonTypes"> Type: </p>
+        <p id="pokemonAbilities">Abilities: </p>
+
+
+    </div>
+
+    <script src="pokemonAPI.js"></script>
 </body>
 
 </html>
