creating FetchAllPokemon function (unfinished)

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -14,12 +14,16 @@
 
     <img src="" alt="Pokemon Image" id="pokemonImage" style="display: none">
 
-    <div>
+    <!-- <div>
 
         <p id="pokemonName"> Name: </p>
         <p id="pokemonTypes"> Type: </p>
         <p id="pokemonAbilities">Abilities: </p>
 
+
+    </div> -->
+
+    <div class="pokemonContainer">
 
     </div>
 
