finished fetchALL function and updatd fetchRandomPokemon. Use div to seperate callbacks while making them random simutaneously.

--- a/jsSTARTER.html
+++ b/jsSTARTER.html
@@ -1,29 +1,27 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My mini Pokedex</title>
-    <link rel="pokemonAPI.css" href="styles.css">
+    <title>My Pokémon Pokedex</title>
+    <link rel="stylesheet" href="pokemonAPI.css">
 </head>
 
 <body>
-    <h1> Welcome to my Mini Pokedex </h1>
-    <button id="randomPokemonButton"> Click here for a random Pokemon</button>
+    <div class="container">
+        <h1>Random Pokémon Info</h1>
+        <button id="randomPokemonButton">Click for Random Pokémon</button>
 
-    <img src="" alt="Pokemon Image" id="pokemonImage" style="display: none">
+        <!-- <div id="pokemonInfo" class="pokemon-info">
+            <h2 id="pokemonName">Name: </h2>
+            <p id="pokemonDescription">Description: </p>
+            <img id="pokemonImage" src="" alt="Pokemon Image" style="display: block;">
+        </div> -->
+        <div id="pokemonContainer">
 
-    <!-- <div>
-
-        <p id="pokemonName"> Name: </p>
-        <p id="pokemonTypes"> Type: </p>
-        <p id="pokemonAbilities">Abilities: </p>
-
-
-    </div> -->
-
-    <div class="pokemonContainer">
+        </div>
 
     </div>
 
